@@ -1,4 +1,6 @@
 * 24/01/14 - v.2.0.4
+   - first version of the ParallelForPipeReduce pattern
+   - fixed problem with run_then_freeze for the ff_minode and ff_monode
    - poolEvolution interface improved
    - introduced the threadPause() method in the ParallelFor/Reduce patterns. 
      It may be used to  put threads to sleep when the spinwait flag is set 
